--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
   <noscript>
-    <meta http-equiv="refresh" content="0;URL=http://2018.nodejsconf.it">
+    <meta http-equiv="refresh" content="0;URL=https://2018.nodejsconf.it">
   </noscript>
   <script type="text/javascript">
-      window.location = "http://2018.nodejsconf.it";
+      window.location = "https://2018.nodejsconf.it";
   </script>
 </head>
-<body>se non succede nulla, vai al <a href="http://2018.nodejsconf.it"></a>nuovo sito</a></body>
+<body>se non succede nulla, vai al <a href="https://2018.nodejsconf.it"></a>nuovo sito</a></body>
 </html>
