https://webdebs.github.io/nodejsconf2023/

--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
 <head>
   <noscript>
-    <meta http-equiv="refresh" content="0;URL=https://2019.nodejsday.it">
+    <meta http-equiv="refresh" content="0;URL=https://webdebs.github.io/nodejsconf2023/">
   </noscript>
   <script type="text/javascript">
-      window.location = "https://2019.nodejsday.it";
+      window.location = "https://webdebs.github.io/nodejsconf2023/";
   </script>
 </head>
-<body>se non succede nulla, vai al <a href="https://2018.nodejsconf.it"></a>nuovo sito</a></body>
 </html>
